--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -19,7 +19,7 @@
     </form>
     <div class="clearfix"></div>
 
-    {{ charts|load_charts:"asignado,ejecutado,ultimos" }}
+    {{ charts|load_charts:"tipo,area,fuente,asignado" }}
     <div class="col-md-5">
             <h3>Ingresos Totales del A&ntilde;o</h3>
             {% for total in totales %}
@@ -62,6 +62,9 @@
           </table>
     </div>
     <div class="clearfix"></div>
+    <div id='tipo'> Chart will be rendered here </div>
+    <div id='area'> Chart will be rendered here </div>
+    <div id='fuente'> Chart will be rendered here </div>
     <div id='asignado'> Chart will be rendered here </div>
     <div id='ejecutado'> Chart will be rendered here </div>
     <div id='ultimos'> Chart will be rendered here </div>
