--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -19,7 +19,11 @@
     </form>
     <div class="clearfix"></div>
 
-    {{ charts|load_charts:"tipo,area,fuente,asignado" }}
+    {% if municipio and charts.4 %}
+        {{ charts|load_charts:"tipo,area,fuente,comparativo_anios,asignado" }}
+    {% else %}
+        {{ charts|load_charts:"tipo,area,fuente,asignado" }}
+    {% endif %}
     <div class="col-md-5">
             <h3>Ingresos Totales del A&ntilde;o</h3>
             {% for total in totales %}
@@ -65,6 +69,7 @@
     <div id='tipo'> Chart will be rendered here </div>
     <div id='area'> Chart will be rendered here </div>
     <div id='fuente'> Chart will be rendered here </div>
+    <div id='comparativo_anios'> Chart will be rendered here </div>
     <div id='asignado'> Chart will be rendered here </div>
     <div id='ejecutado'> Chart will be rendered here </div>
     <div id='ultimos'> Chart will be rendered here </div>
