dos graficos para gastos de funcionamiento

--- a/core/templates/gfchart.html
+++ b/core/templates/gfchart.html
@@ -24,8 +24,18 @@
         <li role="presentation"><a href="#gforigen" aria-controls="gforigen" role="tab" data-toggle="tab">Ingresos ejecutados por origen</a></li>
     </ul>
     <div class="clearfix"></div>
-    {{ charts|load_charts:"gfbar,barra,pie" }}
+    {% if municipio %}
+        {{ charts|load_charts:"gfbar, barra, pie, comparativo2, comparativo_anios, " }}
+    {% else %}
+        {{ charts|load_charts:"gfbar, barra, pie" }}
+    {% endif %}
     <div id="gfTabContent" class="tab-content col-md-12">
+      <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
+        <div id='comparativo_anios'></div>
+      </div>
+      <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
+        <div id='comparativo2'></div>
+      </div>
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
         <div id='pie'></div>
       </div>
