componiendo tempalte de personal

--- a/core/templates/gpersonal.html
+++ b/core/templates/gpersonal.html
@@ -23,13 +23,16 @@
     {% else %}
         {{ charts|load_charts:"tipo, gfbar, barra, pie" }}
     {% endif %}
-    <div id='chart'></div>
-    <div id='chart_ejecutado'></div>
-    <div id='pie'></div>
+    <div id='chart'>chart</div>
+    <div id='chart_ejecutado'>chart</div>
+    <div id='pie'>chart</div>
 
+    <!-- FIXME: copiados de gf -->
+    <div id='gfbar'>gfbar</div>
+    <div id='barra'>barra</div>
 
-    <div id='tipo'></div>
-    <div id='comparativo2'></div>
-    <div id='comparativo3'></div>
-    <div id='comparativo_anios'></div>
+    <div id='tipo'>chart</div>
+    <div id='comparativo2'>chart</div>
+    <div id='comparativo3'>chart</div>
+    <div id='comparativo_anios'>chart</div>
 {% endblock %}
