mathfilters para tablas de inversion

--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -2,6 +2,7 @@
 {% load static thumbnail chartit %}
 {% load humanize %} 
 {% load core_extras %} 
+{% load mathfilters %} 
 {% block main_content %}
     <form method="GET">
     <select name="year">
@@ -25,6 +26,28 @@
         {{ charts|load_charts:"tipo,area,fuente,asignado" }}
     {% endif %}
     <div class="col-md-5">
+            <h3>Tabla2</h3>
+            {% for total in cat %}
+              <div class="row totales">
+                <div class="col-md-9 text-left">
+                    <img src="/static/img/{{ total.catinversion__nombre }}.png" class="pull-left" width="50" alt="{{ total.catinversion__nombre }}" />
+                    <h4>{{ total.catinversion__nombre }}</h4>
+                </div>
+                <div class="col-md-2">
+                    <span class="btn btn-info col-md-12">{{ total.asignado }}</span>
+                </div>
+                <div class="col-md-2">
+                    <span class="btn btn-info col-md-12">{{ total.ejecutado }}</span>
+                </div>
+                {% if total.asignado %}
+                <div class="col-md-2">
+                    <span class="btn btn-info col-md-12">{{ total.ejecutado|div:total.asginado }}</span>
+                </div>
+                {% endif %}
+              </div>
+            {% endfor %}
+    </div>
+    <div class="col-md-5">
             <h3>Ingresos Totales del A&ntilde;o</h3>
             {% for total in totales %}
               <div class="row totales">
@@ -35,6 +58,11 @@
                 <div class="col-md-2">
                     <span class="btn btn-info col-md-12">{{ total.percent }}</span>
                 </div>
+                {% if total.clase_percent %}
+                <div class="col-md-2">
+                    <span class="btn btn-info col-md-12">{{ total.clase_percent }}</span>
+                </div>
+                {% endif %}
               </div>
             {% endfor %}
     </div>
