--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -79,8 +79,11 @@
               </button>
         </div>
         <div class="col-md-8">
+            <!--div id="popover" class="btn" rel="popover" data-content=""
+                title="Popover with image">Popover button</div-->
+
 	        <h3>Distribución Territorial de Nicaragua</h3>
-            <img src="/static/img/nicaragua.png" alt="" alt="img-responsive" width="500px"/>
+            <img src="/static/img/nicaragua.png" alt="" alt="img-responsive" width="500px" usemap="#nicaragua-map"/>
             <p class="text-warning">Click en el departamento para acceder a sus municipios</p>
         </div>
     </div>
@@ -184,5 +187,23 @@
 	</div>
     </div>
    </section>
-
+<map name="nicaragua-map">
+<area shape="poly" coords="15,234,37,246,6,248,67,304,102,254,107,242,101,227,102,207,94,201,84,200,80,210,78,231,65,239,51,237,36,243,28,245,14,233,7,246,9,251,12,240,14,244,10,247,15,240,15,234,15,236,18,239,15,236,16,235" alt="Municipios Chinandega" target="Municipios=chinandega" id="popover" rel="popover" data-content="" />
+<area shape="poly" coords="68,305,84,324,93,330,106,349,129,322,115,317,111,309,112,299,122,306,135,294,141,274,148,264,137,252,128,239,122,219,113,222,103,228,107,237,108,246,97,263,76,293,66,305" alt="Municipios de León" target="Municipios=Leon" href="#" />
+<area shape="poly" coords="141,251,164,235,160,220,149,218,149,203,148,189,141,187,131,192,120,188,109,200,101,208,101,219,103,227,121,221,126,229,130,242,140,252" alt="Municipios de Estelí" target="Municipios=Esteli" href="#" />
+<area shape="poly" coords="101,206,98,181,99,160,110,166,122,172,136,168,147,164,161,169,166,174,165,185,153,190,144,186,132,188,124,187,103,205" alt="Municipios de Madriz" target="Municipios=Madriz" href="#madriz" />
+<area shape="poly" coords="100,163,99,147,132,151,150,130,170,111,172,128,188,137,197,140,195,155,192,172,188,181,180,180,168,178,162,168,151,164,138,167,134,171,123,170,101,163" alt="Municipios de Nueva Segovia" target="Municipios=NuevaSegovia" href="#NuevaSegovia" />
+<area shape="poly" coords="151,191,149,206,157,222,167,236,177,238,222,190,233,169,232,162,237,155,251,150,255,145,265,151,285,119,285,101,287,85,283,81,275,76,274,54,267,51,251,68,249,72,255,82,255,87,251,92,244,91,223,108,207,118,199,124,197,135,198,141,190,179,179,182,170,179,163,188,153,193,152,193,151,194" alt="Municipios de Jinotega" target="Municipios=Jinotega" href="#Jinotega" />
+<area shape="poly" coords="222,195,239,218,259,219,279,218,291,221,300,212,317,209,337,207,361,204,391,204,400,214,410,224,420,233,422,233,419,205,423,158,431,123,447,98,452,75,447,50,444,29,455,4,421,5,408,20,384,31,356,34,333,45,311,47,297,37,289,25,273,35,267,50,273,56,277,62,275,70,280,80,290,89,288,106,287,121,277,138,269,153,257,148,244,153,235,157,236,165,233,175,225,188,222,195,225,195" alt="Municipios de RAAN" target="Municipios=RAAN" href="#RAAN" />
+<area shape="poly" coords="141,254,148,262,149,266,144,275,157,283,173,289,182,289,186,278,203,275,222,269,228,266,239,268,254,279,261,263,254,256,253,244,265,227,267,217,240,218,220,196,208,209,195,221,184,233,177,239,169,238,165,233,141,252" alt="Municipios de Matagalpa" target="Municipios=Matagalpa" href="#Matagalpa" />
+<area shape="poly" coords="106,348,127,385,140,363,143,359,152,359,153,347,154,336,171,333,180,326,191,323,186,311,181,301,170,290,159,284,146,276,141,275,138,285,137,293,143,299,149,308,151,317,160,317,162,323,150,332,140,330,143,319,138,316,130,320,109,346" target="Municipios=Managua" href="#Managua" />
+<area shape="poly" coords="175,291,187,310,194,327,198,345,209,345,211,327,215,312,229,316,245,312,255,302,264,304,279,275,270,260,264,259,258,274,256,281,243,272,230,268,213,274,198,276,188,277,178,291" alt="Municipios de Boaco" target="Municipio=Boaco" href="#Boaco" />
+<area shape="poly" coords="155,339,154,353,153,359,157,365,163,372,172,360,173,346,175,337,171,334,164,336,158,336,155,341" alt="Municipios de Masaya" target="Municipios=Masaya" href="#Masaya" />
+<area shape="poly" coords="130,383,154,407,163,395,159,389,161,383,165,378,162,372,155,362,147,361,139,358,135,371,129,380,127,382,128,381,131,382" alt="Municipios de Carazo" target="Municipios=Carazo" href="#Carazo" />
+<area shape="poly" coords="163,374,163,384,162,393,163,397,178,390,186,385,187,369,181,362,181,348,183,342,194,339,191,324,181,327,175,333,173,342,173,353,169,366,165,373,163,386" alt="Municiapios de Granada" target="Municipios=Granada" href="#Granada" />
+<area shape="poly" coords="211,342,227,363,234,365,264,390,292,365,298,364,317,368,323,366,309,354,301,353,299,328,291,306,287,286,278,280,275,290,266,304,255,303,247,313,234,314,227,317,222,314,212,314,209,330,209,341,215,347" alt="Municipios de Chontales" target="Municipio=Chontales" href="#Chontales" />
+<area shape="poly" coords="157,405,166,421,185,437,204,460,215,444,257,461,250,453,216,439,227,409,213,396,195,405,188,395,186,387,177,393,169,397,164,399,159,407,160,406,160,407,161,407,160,406" alt="Municipios de Rivas" target="Municipios=Rivas" href="#Rivas" />
+<area shape="poly" coords="259,455,258,462,280,470,289,469,302,456,308,452,329,462,346,468,359,480,365,491,384,497,401,492,413,480,408,471,398,456,388,454,371,455,358,447,346,433,323,409,323,391,319,377,312,366,296,365,277,378,266,390,267,394,284,415,295,435,301,445,298,450,293,462,275,461,260,456" alt="Municipios de Rio San Juan" target="Municipios=RioSanJuan" href="#RioSanJuan" />
+<area shape="poly" coords="270,218,258,236,253,248,259,264,268,261,277,275,282,287,295,302,298,325,304,350,321,365,324,376,324,390,325,414,356,444,381,456,400,460,391,427,395,405,411,395,412,374,400,354,411,320,427,298,423,277,421,230,409,228,389,205,357,207,316,211,295,217,270,220,260,233" alt="Municipios de la RAAS" target="Municipios=RAAS" href="#RAAS" />
+</map>
 {% endblock %}
